--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.5.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.5.1"
   }
 }
